# BN_Talk_AI

./: README.md  README.zh-CN  README.zh.md  main.lua  modinfo.json  preload.lua  run_injector.bat
config/: ai_prompts.txt  provider.openai.example  provider.openai.runtime
json/: item_actions.json  talk_tags.json  talk_topics.json
json/items/: debug_console.json
lua/: context.lua  memory.lua  provider_bridge.lua  provider_config.lua  provider_local.lua  router.lua  tuning.lua  util.lua
native_bridge/: CMakeLists.txt  NEXT_STAGE_NOTES.md  exports.txt
native_bridge/bridge_client/: main.cpp
native_bridge/bridge_dll/: bridge_dll.cpp  bridge_exports.h  bridge_state.h  lua_runtime_bridge.cpp
native_bridge/common/: bntalk_protocol.cpp  bntalk_protocol.h
native_bridge/injector/: main.cpp
native_bridge/sidecar/: server.py
